--- a/plugin.xml
+++ b/plugin.xml
@@ -1,19 +1,18 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<plugin id="cordova-plugin-transport-security" version="0.1.2" xmlns="http://apache.org/cordova/ns/plugins/1.0">
-    <name>App Transport Security</name>
+<plugin id="cordova-plugin-allow-mixed-localization" version="0.0.1" xmlns="http://apache.org/cordova/ns/plugins/1.0">
+    <name>CFBundleAllowMixedLocalizations</name>
     <author>Lee Crossley (http://ilee.co.uk/)</author>
-    <description>Cordova / PhoneGap Plugin to allow 'Arbitrary Loads' by adding
-        a declaration to the Info.plist file to bypass the iOS 9 App Transport Security</description>
-    <keywords>cordova, ios, app, security, transport, http, https, ats,
-        ssl, tls, nsapptransportsecurity, nsallowsarbitraryloads</keywords>
+    <description>Allow translated button on ios keyboard</description>
+    <keywords>cordova, ios, app, security, transport, http, https, ats, keyboard,
+        ssl, tls, CFBundleAllowMixedLocalizations</keywords>
     <license>MIT</license>
     <engines>
         <engine name="cordova" version=">=3.0.0"/>
     </engines>
     <platform name="ios">
-      <config-file target="*-Info.plist" parent="NSAppTransportSecurity">
+      <config-file target="*-Info.plist">
           <dict>
-              <key>NSAllowsArbitraryLoads</key>
+              <key>CFBundleAllowMixedLocalizations</key>
               <true/>
           </dict>
       </config-file>
